update first page

--- a/site/locales/en.json
+++ b/site/locales/en.json
@@ -1,5 +1,14 @@
 {
 	"SUB_TITLE": "Building <span class='ga-blue-text'>consistent</span> and <span class='ga-green-text'>meaningful</span> UI with Semantic CSS",
+  "MAIN_SECTION_STYLE_TITLE": "Custom Style Systems",
+	"MAIN_SECTION_STYLE_DESC": "Build unified style systems from your own design tokens.",
+	"MAIN_SECTION_THEME_TITLE": "Dark Theme Ready",
+	"MAIN_SECTION_THEME_DESC": "Switch seamlessly between light and dark themes out of the box.",
+	"MAIN_SECTION_CSS_TITLE": "Framework-Agnostic CSS",
+	"MAIN_SECTION_CSS_DESC": "Use framework-agnostic CSS that extends Vue and React headless UI libraries.",
+	"MAIN_SECTION_TOKEN_TITLE": "Token-Driven Semantic Design",
+	"MAIN_SECTION_TOKEN_DESC": "Combine design tokens with natural, semantic class names for a readable design language.",
+  "MAIN_SECTION_ELEMENT_TITLE": "Example UI Element",
   "WELCOME_FROG_TITLE": "Frog UI",  
   "WELCOME_FROG_DESC": "The Frog design system was designed with the goal of <span class='bold'>\"expressing styles through language, not code\"</span>. When developers implement UI, it allows them to apply styles like drawing a picture using natural sentences, instead of cryptic tokens or abbreviations.",
   "WELCOME_SEMANTIC_TITLE": "Semantic CSS Close to Natural Language",
