--- a/site/locales/ko.json
+++ b/site/locales/ko.json
@@ -1,5 +1,14 @@
 {
 	"SUB_TITLE": "Semantic CSS를 사용하여 <span class='ga-blue-text'>일관</span>되고 <span class='ga-green-text'>의미</span>있게 화면을 구현합니다.",
+	"MAIN_SECTION_STYLE_TITLE": "사용자 정의 스타일",
+	"MAIN_SECTION_STYLE_DESC": "사용자 지정 토큰으로 빌드된 하나의 통합 스타일 시스템을 제공합니다.",
+	"MAIN_SECTION_THEME_TITLE": "다크 테마 지원",
+	"MAIN_SECTION_THEME_DESC": "라이트·다크 테마를 기본 지원하여 상황에 맞는 대비와 분위기로 쉽게 전환할 수 있습니다.",
+	"MAIN_SECTION_CSS_TITLE": "프레임워크 독립 CSS",
+	"MAIN_SECTION_CSS_DESC": "프레임워크에 독립된 CSS로 제공되어 Vue·React 헤드리스 UI와 결합해 자유롭게 확장할 수 있습니다.",
+	"MAIN_SECTION_TOKEN_TITLE": "토큰 기반 시맨틱 디자인",
+	"MAIN_SECTION_TOKEN_DESC": "디자인 토큰과 자연어에 가까운 의미 있는 단어를 결합해 읽기 쉬운 시맨틱 디자인 언어를 제공합니다.",
+	"MAIN_SECTION_ELEMENT_TITLE": "UI 예제",
 	"WELCOME_FROG_TITLE": "Frog UI",
 	"WELCOME_FROG_DESC": "Frog 디자인 시스템은 <span class='bold'>“코드가 아니라 언어로 스타일을 말하는 것”</span>을 목표로 설계되었습니다. 개발자가 UI를 구현할 때, 약어나 암호 같은 토큰 대신 자연스러운 문장으로 그림 그리듯 스타일을 적용할 수 있도록 구현되었습니다.",
 	"WELCOME_SEMANTIC_TITLE": "자연어에 가까운 Semantic CSS",
