--- a/site/locales/en.json
+++ b/site/locales/en.json
@@ -9,6 +9,8 @@
 	"MAIN_SECTION_TOKEN_TITLE": "Token-Driven Semantic Design",
 	"MAIN_SECTION_TOKEN_DESC": "Combine design tokens with natural, semantic class names for a readable design language.",
   "MAIN_SECTION_ELEMENT_TITLE": "Example UI Element",
+  "MAIN_SECTION_CONTACT_TITLE": "Contact Me",
+	"MAIN_SECTION_CONTACT_DESC": "",
   "WELCOME_FROG_TITLE": "Frog UI",  
   "WELCOME_FROG_DESC": "The Frog design system was designed with the goal of <span class='bold'>\"expressing styles through language, not code\"</span>. When developers implement UI, it allows them to apply styles like drawing a picture using natural sentences, instead of cryptic tokens or abbreviations.",
   "WELCOME_SEMANTIC_TITLE": "Semantic CSS Close to Natural Language",
@@ -23,31 +25,31 @@
   "FAQS_TABS_ITEM_4": "Architecture & Scalability",
   "FAQS_TABS_ITEM_5": "Performance & Tech",
   "FAQS_CONCEPT_1_Q": "What is the core concept of FROG UI?",
-  "FAQS_CONCEPT_1_A": "FROG UI was created with the goal of \"expressing styles through language, not code\". It is designed to allow developers to express UI like drawing a picture by combining words close to natural language, instead of abbreviations or shortened codes.",
+  "FAQS_CONCEPT_1_A": "FROG UI was created with the goal of <mark>\"expressing styles through language, not code\"</mark>. It is designed to allow developers to express UI like drawing a picture by combining words close to natural language, instead of abbreviations or shortened codes.",
   "FAQS_CONCEPT_2_Q": "Why use a CSS framework·semantic CSS approach instead of CSS‑in‑JS?",
-  "FAQS_CONCEPT_2_A": "We adopted the semantic CSS pattern to separate design tokens and style layers from the JavaScript runtime for better performance, while simultaneously creating a reusable design language that is independent of frameworks/platforms.",
+  "FAQS_CONCEPT_2_A": "We adopted the semantic CSS pattern to separate design tokens and style layers from the JavaScript runtime for better performance, while simultaneously creating <mark>a reusable design language that is independent of frameworks/platforms.</mark>",
   "FAQS_SEMANTIC_1_Q": "What does 'Semantic CSS' mean in this system?",
-  "FAQS_SEMANTIC_1_A": "It refers to a method of expressing the visual and intentional characteristics of components using meaningful words. For example, a button's role, size, shape, icon position, etc. are directly expressed as words and used as classes.",
+  "FAQS_SEMANTIC_1_A": "It refers to a method of expressing <mark>the visual and intentional characteristics of components using meaningful words</mark>. For example, a button's role, size, shape, icon position, etc. are directly expressed as words and used as classes.",
   "FAQS_SEMANTIC_2_Q": "What specifically does it mean to apply styles like natural language?",
   "FAQS_SEMANTIC_2_A": "It means directly translating a sentence like \"a small primary button that is round and includes a left icon\" into a class combination such as button primary round icon left small. In other words, it provides an experience of translating sentences in your mind almost directly into code.",
   "FAQS_SEMANTIC_3_Q": "Why not use abbreviated utility classes like Tailwind?",
   "FAQS_SEMANTIC_3_A": "Abbreviation-based utilities are fast, but as teams grow, the cost of memorizing and interpreting rules increases. This system uses words with immediately readable meanings like primary, round, and small, prioritizing readability and onboarding experience.",
   "FAQS_EXPERIENCE_1_Q": "How does this help collaboration with designers?",
-  "FAQS_EXPERIENCE_1_A": "The language designers use and the words used in code become almost identical. A sentence like \"please add a left icon to a primary round small button\" effectively becomes the class combination itself, which reduces interpretation loss when translating design specs into code.",
+  "FAQS_EXPERIENCE_1_A": "<mark>The language designers use and the words used in code become almost identical</mark>. A sentence like \"please add a left icon to a primary round small button\" effectively becomes the class combination itself, which reduces interpretation loss when translating design specs into code.",
   "FAQS_EXPERIENCE_2_Q": "What is the learning curve like when new team members join?",
   "FAQS_EXPERIENCE_2_A": "Instead of memorizing framework-specific abbreviations, they just need to understand words they already know. By simply scanning the class names, they can infer the role and style of a component, which speeds up understanding of existing code and adaptation.",
   "FAQS_EXPERIENCE_3_Q": "Can consistency be maintained even in large-scale projects?",
-  "FAQS_EXPERIENCE_3_A": "Because core vocabulary (e.g., button, primary, danger, round, small, etc.) is proactively defined and enforced in the design system, everyone shares the same word set even as the team grows. As a result, style combinations remain flexible while tokens and meanings stay consistent.",
+  "FAQS_EXPERIENCE_3_A": "Because core vocabulary (e.g., button, primary, danger, round, small, etc.) is proactively defined and enforced in the design system, everyone shares the same word set even as the team grows. As a result, <mark>style combinations remain flexible while tokens and meanings stay consistent.</mark>",
   "FAQS_ARCHITECTURE_1_Q": "How are component variants expressed?",
   "FAQS_ARCHITECTURE_1_A": "Each variant is expressed with a single meaningful word. For example, a button uses role variants like primary and secondary, combined with size variants like tiny, small, large, and huge.",
   "FAQS_ARCHITECTURE_2_Q": "What principles are followed when adding new style tokens?",
-  "FAQS_ARCHITECTURE_2_A": "As much as possible, we choose tokens based on whether they are \"frequently used, simple, and familiar words.\" We prioritize expressions that designers and developers will actually use in conversations, and prefer full names and meaning-centered naming over abbreviations. (Commonly used abbreviations like xs and sm are allowed as exceptions.)",
+  "FAQS_ARCHITECTURE_2_A": "As much as possible, we choose tokens based on whether they are <mark>\"frequently used, simple, and familiar words.\"</mark> We prioritize expressions that designers and developers will actually use in conversations, and prefer full names and meaning-centered naming over abbreviations. (Commonly used abbreviations like xs and sm are allowed as exceptions.)",
   "FAQS_ARCHITECTURE_3_Q": "How are responsive styles handled?",
   "FAQS_ARCHITECTURE_3_A": "Responsive behavior is also expressed using meaning-based prefixes or dedicated rules. Even when using device-based breakpoints like md or lg, our principle is to keep the internal tokens and combinations human-readable.",
   "FAQS_PERPORMANCE_1_Q": "Is FROG tied to a specific frontend framework?",
-  "FAQS_PERPORMANCE_1_A": "No. Since styles exist as a CSS layer independent of any framework, it is designed so that the same design language can be used across various environments such as React, Vue, and Web Components.",
+  "FAQS_PERPORMANCE_1_A": "No. Since styles exist as <mark>a CSS layer independent of any framework</mark>, it is designed so that the same design language can be used across various environments such as React, Vue, and Web Components.",
   "FAQS_PERPORMANCE_2_Q": "What performance benefits does it offer?",
-  "FAQS_PERPORMANCE_2_A": "By default, it uses pre-prepared static CSS instead of generating or injecting styles at runtime. This reduces unnecessary JavaScript overhead during initial load and re-rendering.",
+  "FAQS_PERPORMANCE_2_A": "By default, it <mark>uses pre-prepared static CSS</mark> instead of generating or injecting styles at runtime. This reduces unnecessary JavaScript overhead during initial load and re-rendering.",
   "BASE_TYPOGRAPHY_SUB_TITLE": "Foundations typography like font sizes, spacing, weight and Heading System.",
   "BASE_COLORS_SUB_TITLE": "Defined color tokens for branding, backgrounds, and UI states.",
   "ELEMENTS_BUTTON_SUB_TITLE": "Interactive buttons with variants for size, color, and state.",
